service methods, crd, and cache unification (#5)
* fill out service methods

* add todos for missing methods

* use CRBaseImpl, connect storage fns

* lint updates
